@@ -16,6 +16,7 @@ Bug Fixes:
   - X10: patch for potential race condition between thread deallocating 
     gateway and thread processing serial port input (Juha Lindfors, ORCJAVA-359)
   - Fix ISY-99 connection error messages at regular interval (ORCJAVA-372)
+  - Vera protocol implementation exception at startup (ORCJAVA-403)
 
 Controller Pro 1.0.10
 =====================
